--- a/.github/workflows/ci-polaris.yml
+++ b/.github/workflows/ci-polaris.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 8
           architecture: x64
         
